target/src/PLParser.java
// Generated from java-escape by ANTLR 4.11.1

import backend.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, NUMBER=35, WORDQUOTE=36, WORD=37, EQUAL=38, 
		SEMICOLUMN=39, OP=40, WHITESPACE=41;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_forLoop = 2, RULE_ifelse = 3, 
		RULE_funcDeclare = 4, RULE_funcInvoke = 5, RULE_funcBody = 6, RULE_declareParameterName = 7, 
		RULE_declareParameters = 8, RULE_assignment = 9, RULE_print = 10, RULE_expression = 11, 
		RULE_listString = 12, RULE_listInt = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "forLoop", "ifelse", "funcDeclare", "funcInvoke", 
			"funcBody", "declareParameterName", "declareParameters", "assignment", 
			"print", "expression", "listString", "listInt"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'for'", "'('", "'in'", "'..'", "')'", "'if('", "'else'", "'function '", 
			"'{'", "'}'", "', '", "'()'", "'['", "'] = '", "'.add('", "'front'", 
			"'back'", "'print('", "' + '", "' - '", "'-'", "' * '", "' / '", "' ++ '", 
			"' > '", "' == '", "' < '", "'.map('", "'max('", "'min('", "'sum('", 
			"'avg('", "'size('", "']'", null, null, null, "' = '", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "NUMBER", 
			"WORDQUOTE", "WORD", "EQUAL", "SEMICOLUMN", "OP", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    final Boolean TRUEBOOLEAN = true;
	    final Boolean FALSEBOOLEAN = false;

	    String removeQuotes(String text){
	         text = text.substring(1, text.length() - 1);
	         return text;
	    }
	    String addStrings(String text1, String text2){
	        return text1+text2;
	    }
	    int toInt(String text) {
	        return Integer.parseInt(text);
	    }
	    void display(int value) {
	        System.out.println("> " + value);
	    }

	public PLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Expr expr;
		public StatementContext statement;
		public TerminalNode EOF() { return getToken(PLParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 List <Expr> statements = new ArrayList<Expr>(); 
			setState(32); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(29);
				((ProgramContext)_localctx).statement = statement();
				 statements.add(((ProgramContext)_localctx).statement.expr); 
				}
				}
				setState(34); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((_la) & ~0x3f) == 0 && ((1L << _la) & 257161437510L) != 0 );
			setState(36);
			match(EOF);
			 ((ProgramContext)_localctx).expr =  new Block (
			                            statements
			                        );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Expr expr;
		public AssignmentContext assignment;
		public PrintContext print;
		public IfelseContext ifelse;
		public FuncDeclareContext funcDeclare;
		public ForLoopContext forLoop;
		public ExpressionContext expression;
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public TerminalNode SEMICOLUMN() { return getToken(PLParser.SEMICOLUMN, 0); }
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public IfelseContext ifelse() {
			return getRuleContext(IfelseContext.class,0);
		}
		public FuncDeclareContext funcDeclare() {
			return getRuleContext(FuncDeclareContext.class,0);
		}
		public ForLoopContext forLoop() {
			return getRuleContext(ForLoopContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(62);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(39);
				((StatementContext)_localctx).assignment = assignment();
				setState(40);
				match(SEMICOLUMN);
				 ((StatementContext)_localctx).expr =  ((StatementContext)_localctx).assignment.expr; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				 List <Expr> output = new ArrayList<Expr>(); 
				setState(44);
				((StatementContext)_localctx).print = print();
				setState(45);
				match(SEMICOLUMN);
				 output.add(((StatementContext)_localctx).print.expr); 
				 ((StatementContext)_localctx).expr =  new Output(output); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(49);
				((StatementContext)_localctx).ifelse = ifelse();
				 ((StatementContext)_localctx).expr =  ((StatementContext)_localctx).ifelse.expr; 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(52);
				((StatementContext)_localctx).funcDeclare = funcDeclare();
				 ((StatementContext)_localctx).expr =  ((StatementContext)_localctx).funcDeclare.expr; 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(55);
				((StatementContext)_localctx).forLoop = forLoop();
				 ((StatementContext)_localctx).expr =  ((StatementContext)_localctx).forLoop.expr; 
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(58);
				((StatementContext)_localctx).expression = expression(0);
				 ((StatementContext)_localctx).expr =  ((StatementContext)_localctx).expression.value; 
				setState(60);
				match(SEMICOLUMN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ForLoopContext extends ParserRuleContext {
		public Expr expr;
		public Token WORD;
		public Token NUMBER;
		public FuncBodyContext funcBody;
		public TerminalNode WORD() { return getToken(PLParser.WORD, 0); }
		public List<TerminalNode> NUMBER() { return getTokens(PLParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(PLParser.NUMBER, i);
		}
		public FuncBodyContext funcBody() {
			return getRuleContext(FuncBodyContext.class,0);
		}
		public ForLoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forLoop; }
	}

	public final ForLoopContext forLoop() throws RecognitionException {
		ForLoopContext _localctx = new ForLoopContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_forLoop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(T__0);
			setState(65);
			match(T__1);
			setState(66);
			((ForLoopContext)_localctx).WORD = match(WORD);
			setState(67);
			match(T__2);
			setState(68);
			((ForLoopContext)_localctx).NUMBER = match(NUMBER);
			 String start = (((ForLoopContext)_localctx).NUMBER!=null?((ForLoopContext)_localctx).NUMBER.getText():null); 
			setState(70);
			match(T__3);
			setState(71);
			((ForLoopContext)_localctx).NUMBER = match(NUMBER);
			setState(72);
			match(T__4);
			setState(73);
			((ForLoopContext)_localctx).funcBody = funcBody();
			 ((ForLoopContext)_localctx).expr =  new ForLoop(
			                        (((ForLoopContext)_localctx).WORD!=null?((ForLoopContext)_localctx).WORD.getText():null),
			                        new IntLiteral(start),
			                        new IntLiteral((((ForLoopContext)_localctx).NUMBER!=null?((ForLoopContext)_localctx).NUMBER.getText():null)),
			                        ((ForLoopContext)_localctx).funcBody.body
			                        ); 
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfelseContext extends ParserRuleContext {
		public Expr expr;
		public ExpressionContext expression;
		public FuncBodyContext if_;
		public FuncBodyContext funcBody;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<FuncBodyContext> funcBody() {
			return getRuleContexts(FuncBodyContext.class);
		}
		public FuncBodyContext funcBody(int i) {
			return getRuleContext(FuncBodyContext.class,i);
		}
		public IfelseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifelse; }
	}

	public final IfelseContext ifelse() throws RecognitionException {
		IfelseContext _localctx = new IfelseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ifelse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(T__5);
			setState(77);
			((IfelseContext)_localctx).expression = expression(0);
			setState(78);
			match(T__4);
			setState(79);
			((IfelseContext)_localctx).if_ = ((IfelseContext)_localctx).funcBody = funcBody();
			Expr ifBody = ((IfelseContext)_localctx).funcBody.body;
			setState(81);
			match(T__6);
			setState(82);
			((IfelseContext)_localctx).funcBody = funcBody();
			 ((IfelseContext)_localctx).expr =  new Ifelse(
			                            ((IfelseContext)_localctx).expression.value,
			                            ifBody,
			                            ((IfelseContext)_localctx).funcBody.body
			                            );
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncDeclareContext extends ParserRuleContext {
		public Expr expr;
		public Token funcName;
		public DeclareParameterNameContext declareParameterName;
		public FuncBodyContext funcBody;
		public DeclareParameterNameContext declareParameterName() {
			return getRuleContext(DeclareParameterNameContext.class,0);
		}
		public FuncBodyContext funcBody() {
			return getRuleContext(FuncBodyContext.class,0);
		}
		public TerminalNode WORD() { return getToken(PLParser.WORD, 0); }
		public FuncDeclareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDeclare; }
	}

	public final FuncDeclareContext funcDeclare() throws RecognitionException {
		FuncDeclareContext _localctx = new FuncDeclareContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_funcDeclare);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(T__7);
			setState(86);
			((FuncDeclareContext)_localctx).funcName = match(WORD);
			setState(87);
			((FuncDeclareContext)_localctx).declareParameterName = declareParameterName();
			setState(88);
			((FuncDeclareContext)_localctx).funcBody = funcBody();
			((FuncDeclareContext)_localctx).expr =  new Declare(
			                            (((FuncDeclareContext)_localctx).funcName!=null?((FuncDeclareContext)_localctx).funcName.getText():null),
			                            ((FuncDeclareContext)_localctx).declareParameterName.parameters,
			                            ((FuncDeclareContext)_localctx).funcBody.body
			                            );
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncInvokeContext extends ParserRuleContext {
		public Expr expr;
		public Token funcName;
		public DeclareParametersContext declareParameters;
		public DeclareParametersContext declareParameters() {
			return getRuleContext(DeclareParametersContext.class,0);
		}
		public TerminalNode WORD() { return getToken(PLParser.WORD, 0); }
		public FuncInvokeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcInvoke; }
	}

	public final FuncInvokeContext funcInvoke() throws RecognitionException {
		FuncInvokeContext _localctx = new FuncInvokeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funcInvoke);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			((FuncInvokeContext)_localctx).funcName = match(WORD);
			setState(92);
			((FuncInvokeContext)_localctx).declareParameters = declareParameters();
			 ((FuncInvokeContext)_localctx).expr =  new Invoke( (((FuncInvokeContext)_localctx).funcName!=null?((FuncInvokeContext)_localctx).funcName.getText():null), ((FuncInvokeContext)_localctx).declareParameters.arguements); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncBodyContext extends ParserRuleContext {
		public Expr body;
		public StatementContext statement;
		public ExpressionContext expression;
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public FuncBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcBody; }
	}

	public final FuncBodyContext funcBody() throws RecognitionException {
		FuncBodyContext _localctx = new FuncBodyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_funcBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 List <Expr> functionBody = new ArrayList<Expr>(); 
			setState(96);
			match(T__8);
			setState(103); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(103);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(97);
					((FuncBodyContext)_localctx).statement = statement();
					 functionBody.add(((FuncBodyContext)_localctx).statement.expr); 
					}
					break;
				case 2:
					{
					setState(100);
					((FuncBodyContext)_localctx).expression = expression(0);
					 functionBody.add(((FuncBodyContext)_localctx).expression.value); 
					}
					break;
				}
				}
				setState(105); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((_la) & ~0x3f) == 0 && ((1L << _la) & 257161437510L) != 0 );
			setState(107);
			match(T__9);
			 ((FuncBodyContext)_localctx).body =  new Block(functionBody); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclareParameterNameContext extends ParserRuleContext {
		public List<String> parameters;
		public Token WORD;
		public List<TerminalNode> WORD() { return getTokens(PLParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(PLParser.WORD, i);
		}
		public DeclareParameterNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declareParameterName; }
	}

	public final DeclareParameterNameContext declareParameterName() throws RecognitionException {
		DeclareParameterNameContext _localctx = new DeclareParameterNameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declareParameterName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 List <String> parameter = new ArrayList<String>(); 
			setState(124);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				{
				setState(111);
				match(T__1);
				setState(112);
				((DeclareParameterNameContext)_localctx).WORD = match(WORD);
				 parameter.add((((DeclareParameterNameContext)_localctx).WORD!=null?((DeclareParameterNameContext)_localctx).WORD.getText():null)); 
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__10) {
					{
					{
					setState(114);
					match(T__10);
					setState(115);
					((DeclareParameterNameContext)_localctx).WORD = match(WORD);
					 parameter.add((((DeclareParameterNameContext)_localctx).WORD!=null?((DeclareParameterNameContext)_localctx).WORD.getText():null)); 
					}
					}
					setState(121);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(122);
				match(T__4);
				}
				break;
			case T__11:
				{
				setState(123);
				match(T__11);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			 ((DeclareParameterNameContext)_localctx).parameters =  parameter; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclareParametersContext extends ParserRuleContext {
		public List<Expr> arguements;
		public ExpressionContext expression;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public DeclareParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declareParameters; }
	}

	public final DeclareParametersContext declareParameters() throws RecognitionException {
		DeclareParametersContext _localctx = new DeclareParametersContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declareParameters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 List <Expr> arguement = new ArrayList<Expr>(); 
			setState(144);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				{
				setState(129);
				match(T__1);
				setState(130);
				((DeclareParametersContext)_localctx).expression = expression(0);
				 arguement.add(((DeclareParametersContext)_localctx).expression.value); 
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__10) {
					{
					{
					setState(132);
					match(T__10);
					setState(133);
					((DeclareParametersContext)_localctx).expression = expression(0);
					 arguement.add(((DeclareParametersContext)_localctx).expression.value); 
					}
					}
					setState(140);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(141);
				match(T__4);
				}
				break;
			case T__11:
				{
				setState(143);
				match(T__11);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			 ((DeclareParametersContext)_localctx).arguements =  arguement; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentContext extends ParserRuleContext {
		public Expr expr;
		public Token WORD;
		public ExpressionContext expression;
		public Token name;
		public ExpressionContext ind;
		public ExpressionContext val;
		public Token WORDQUOTE;
		public Token NUMBER;
		public Token index;
		public Token toggle;
		public TerminalNode WORD() { return getToken(PLParser.WORD, 0); }
		public TerminalNode EQUAL() { return getToken(PLParser.EQUAL, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode WORDQUOTE() { return getToken(PLParser.WORDQUOTE, 0); }
		public List<TerminalNode> NUMBER() { return getTokens(PLParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(PLParser.NUMBER, i);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	}
